Alterações corrigi banco

--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -24,9 +24,9 @@
                   <td> <label for="nome">Tipo :</label> </td>
                   <td> <select id="tipo" name="tipo">
                         <option value="Apartamento" selected>Apartamento</option>
-                        <option value="Casa_condominio">Casa em condomínio</option>
+                        <option value="Casa_condominio">Casa_condominio</option>
                         <option value="Casa_rua">Casa de Rua</option>
-                        <option value="Sobrado_condomínio">Sobrado em Condomínio</option>
+                        <option value="Sobrado_condominio">Sobrado em Condomínio</option>
                         <option value="Sobrado_rua" >Sobrado de Rua</option>
                         <option value="Terreno">Terreno</option>
                         <option value="Chacara">Chácara</option>
