--- a/portal/templates/portal/referenciais.html
+++ b/portal/templates/portal/referenciais.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 
+
 {% block content %}
 <div class = "card">
 <div class="card-body">
@@ -21,38 +22,39 @@
           <thead>
             <tr>
                 <th>ID</th>
-                <th>Dta cadastro</th>
+
                 <th>Tipo</th>
                 <th>Condomínio</th>
                 <th>Bairro</th>
                 <th>Cidade</th>
                 <th>AC</th>
-                <th>AT</th>
                 <th>Estatus</th>
                 <th>Padrão</th>
                 <th>EC</th>
                 <th>Idade</th>
                 <th>Valor</th>
-
+                <th>M²</th>
+                <th>Considerado</th>
             </tr>
           </thead>
           <tbody>
              {%  for imovel in filtroCond %}
+
              <tr>
                  <td>{{ imovel.id  }} </td>
-                 <td>{{ imovel.dtacadastro  }} </td>
+
                  <td>{{ imovel.tipo.nome }}</td>
                  <td>{{ imovel.nomecondominio.nome }} </td>
                  <td>{{ imovel.bairro }}</td>
                  <td>{{ imovel.cidade }} </td>
                  <td>{{ imovel.aconstruida }} </td>
-                 <td>{{ imovel.atotal }} </td>
                  <td>{{ imovel.status }} </td>
                  <td>{{ imovel.padrao.nome }} </td>
                  <td>{{ imovel.estadoconser.nome }} </td>
                  <td>{{ imovel.idade }} </td>
                  <td>{{ imovel.valordevenda }} </td>
-
+                 <td>{{ imovel.metroquadrado }} </td>
+                 <td>{{ imovel.vl_considerado }} </td>
              </tr>
 
              {% endfor %}
@@ -60,7 +62,7 @@
           </tbody>
         </table>
 
-    <div><h4><b>VidaUtil em % = </b>{{ vidautil }},<b> Percentual de Homogeinização = </b> {{ valor_da_coluna }}%</b></h4></div>
+    <div><h4><b>VidaUtil em % = </b>{{ vidautil }},<b> Percentual de Homogeinização = </b> {{ valor_da_coluna }}% </h4></div>
     <div><h4><b>Média m² = </b> {{ media_metro2 }} <b> x  Área Construída = </b>{{ area_construida  }} =>
         <b>Valor Avaliado = </b> {{ valor }} </h4></div>
 </div>
