--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -12,13 +12,16 @@
 <body>
 
 <nav id="menu-h">
-<ul>
+<ul class="table table-responsive">
     <li><a href="{% url 'home' %}">Avaliacao Imobiliária</a></li>
-    <li><a href="{% url 'imoveis' %}">Listar Imóveis</a></li>
-    <li><a href="{% url 'condominio' %}">Listar Condomínios</a></li>
-    <li><a href="{% url 'padrao' %}">Listar Padrões</a></li>
-    <li><a href="{% url 'tipo' %}">Listar Tipos</a></li>
-    <li><a href="{% url 'estadoConservacao' %}">Listar Estado de Conservação</a></li>
+    <li><a href="{% url 'imoveis' %}">Imóveis</a></li>
+    <li><a href="{% url 'condominio' %}"> Condomínios</a></li>
+    <li><a href="{% url 'padrao' %}">Padrões</a></li>
+    <li><a href="{% url 'tipo' %}"> Tipos</a></li>
+    <li><a href="{% url 'estadoConservacao' %}"> Estado de Conservação</a></li>
+    <li><a href="{% url 'util' %}">Vida Útil</a></li>
+    <li><a href="{% url 'ross' %}">Tabela Ross Heideck</a></li>
+
 </ul>
 </nav>
 
